--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,9 @@
   "name": "CoreUI-React sample",
   "icons": [
     {
-      "src": "./assets/img/favicon.png",
+      "src": "./assets/images/022.svg",
       "sizes": "100x100",
-      "type": "image/png"
+      "type": "image/svg"
     }
   ],
   "start_url": ".",
