Project Manager chnages

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nivo/core": "^0.88.0",
     "@nivo/pie": "^0.88.0",
     "@popperjs/core": "^2.11.8",
+    "@react-google-maps/api": "^2.20.6",
     "@xyflow/react": "^12.4.3",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
@@ -47,12 +48,14 @@
     "fusioncharts": "^4.1.2",
     "highcharts": "^12.1.2",
     "highcharts-react-official": "^3.2.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fusioncharts": "^4.1.0",
     "react-icons": "^5.4.0",
+    "react-leaflet": "^4.2.1",
     "react-organizational-chart": "^2.2.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
