--- a/nginx.conf
+++ b/nginx.conf
@@ -1,18 +1,27 @@
 server {
-     listen       $PORT;
-     server_name  localhost;
+  listen       $PORT;
+  server_name  localhost;
 
-     location / {
-         root   /usr/share/nginx/html;
-         index  index.html index.htm;
-         try_files $uri /index.html;
-     }
+  root /usr/share/nginx/html;
 
-     gzip on;
-     gzip_vary on;
-     gzip_min_length 10240;
-     gzip_proxied expired no-cache no-store private auth;
-     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
-     gzip_disable "MSIE [1-6]\.";
+  # Serve static files properly
+  location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|ttf|woff|woff2|json)$ {
+    try_files $uri =404;
+    access_log off;
+    expires 1y;
+    add_header Cache-Control "public";
+  }
 
+  # SPA fallback: all other routes go to index.html
+  location / {
+    try_files $uri /index.html;
+    index index.html;
+  }
+
+  gzip on;
+  gzip_vary on;
+  gzip_min_length 10240;
+  gzip_proxied expired no-cache no-store private auth;
+  gzip_types text/plain text/css text/xml application/json application/javascript application/x-javascript application/xml+rss application/atom+xml image/svg+xml;
+  gzip_disable "MSIE [1-6]\.";
 }
