nginx.config code uodate

--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,7 @@ server {
 
   # SPA fallback: all other routes go to index.html
   location / {
-    try_files $uri /index.html;
+    try_files $uri $uri/ /index.html;
     index index.html;
   }
 
