--- a/nginx.conf
+++ b/nginx.conf
@@ -4,18 +4,18 @@ server {
 
   root /usr/share/nginx/html;
 
-  # Serve static files properly
-  location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|ttf|woff|woff2|json)$ {
-    try_files $uri =404;
-    access_log off;
-    expires 1y;
-    add_header Cache-Control "public";
-  }
-
-  # SPA fallback: all other routes go to index.html
+  # SPA fallback: all routes go to index.html if file not found
   location / {
     try_files $uri $uri/ /index.html;
     index index.html;
+  }
+
+  # Static files
+  location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|ttf|woff|woff2|json)$ {
+    try_files $uri /index.html;
+    access_log off;
+    expires 1y;
+    add_header Cache-Control "public";
   }
 
   gzip on;
